--- a/views/register.ejs
+++ b/views/register.ejs
@@ -78,11 +78,11 @@
                         <form role="form" action="../register" method="post" class="login-form">
                           <div class="form-group">
                             <label class="sr-only" for="form-username">Username</label>
-                              <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+                              <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="name">
                             </div>
                             <div class="form-group">
                               <label class="sr-only" for="form-password">Password</label>
-                              <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
+                              <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="pw">
                             </div>
                             <button type="submit" class="btn">Sign up!</button>
                             <a href="/index" class="btn" role="button">Go to login</a>
