--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,6 +2,7 @@
 <!-- 원래 생각한 첫 페이지가 이거-->
 
 <html>
+<!--link rel="stylesheet" type="text/css" href="css/navbar.css"-->
 <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +35,7 @@
  </head>
 
  <body>
-   <h1> Dashboard </h1>
+
    <div class="container">
 
      <!-- Static navbar -->
@@ -98,3 +99,4 @@
    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
  </body>
 </html>
+
