--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -10,20 +10,22 @@
    <meta name="author" content="">
    <link rel="icon" href="../../favicon.ico">
 
-   <title>Navbar Template for Bootstrap</title>
-
-   <!-- Bootstrap core CSS -->
-   <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="common/css/signin.css">
+    <link rel="stylesheet" href="common/css/style.css">
 
    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+   <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
    <!-- Custom styles for this template -->
    <link href="navbar.css" rel="stylesheet">
 
    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-   <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+   <script src="assets/js/ie-emulation-modes-warning.js"></script>
 
    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
    <!--[if lt IE 9]>
@@ -75,15 +77,6 @@
        </div><!--/.container-fluid -->
      </nav>
 
-     <!-- Main component for a primary marketing message or call to action -->
-     <div class="jumbotron">
-       <h1>Navbar example</h1>
-       <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-       <p>
-         <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-       </p>
-     </div>
-
    </div> <!-- /container -->
 
 
@@ -91,9 +84,9 @@
    ================================================== -->
    <!-- Placed at the end of the document so the pages load faster -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-   <script src="../../dist/js/bootstrap.min.js"></script>
+   <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+   <script src="dist/js/bootstrap.min.js"></script>
    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+   <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
  </body>
 </html>
