--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -48,30 +48,30 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="#">Project name</a>
+           <a class="navbar-brand" href="#">PMO @@@@ </a>
          </div>
          <div id="navbar" class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
-             <li class="active"><a href="#">Home</a></li>
-             <li><a href="#">About</a></li>
-             <li><a href="#">Contact</a></li>
-             <li class="dropdown">
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+             <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="dashboard">Dashboard</a></li>
+             <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="newproject">New Project</a></li>
+             <li <% if (page_name === 'myproject') { %>class="active" <% } %>class="dropdown">
+               <a href="myproject" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> My Projects <span class="caret"></span></a>
                <ul class="dropdown-menu">
-                 <li><a href="#">Action</a></li>
-                 <li><a href="#">Another action</a></li>
-                 <li><a href="#">Something else here</a></li>
-                 <li role="separator" class="divider"></li>
+                 <li><a href="project1">Project 1</a></li>
+                 <li><a href="project2">Project 2</a></li>
+                 <li><a href="#">Something else</a></li>
+                 <!--li role="separator" class="divider"></li>
                  <li class="dropdown-header">Nav header</li>
                  <li><a href="#">Separated link</a></li>
-                 <li><a href="#">One more separated link</a></li>
+                 <li><a href="#">One more separated link</a></li-->
                </ul>
              </li>
+             <li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages</a></li>
            </ul>
            <ul class="nav navbar-nav navbar-right">
-             <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-             <li><a href="../navbar-static-top/">Static top</a></li>
-             <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+             <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> My Page </a></li>
+             <!--li><a href="../navbar-static-top/">Static top</a></li>
+             <li><a href="../navbar-fixed-top/">Fixed top</a></li-->
            </ul>
          </div><!--/.nav-collapse -->
        </div><!--/.container-fluid -->
@@ -84,6 +84,6 @@
    <script src="bootstrap/js/bootstrap.min.js"></script>
    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-  
+
  </body>
 </html>
