--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,11 +78,11 @@
                         <form role="form" action="/login" method="post" class="login-form">
                           <div class="form-group">
                             <label class="sr-only" for="form-username">Username</label>
-                              <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="name">
+                              <input type="text" name="username" placeholder="Username..." class="form-username form-control" id="name">
                             </div>
                             <div class="form-group">
                               <label class="sr-only" for="form-password">Password</label>
-                              <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="pw">
+                              <input type="password" name="pw" placeholder="Password..." class="form-password form-control" id="pw">
                             </div>
                             <button type="submit" class="btn">Sign in!</button>
                             <a href="/dashboard" class="btn" role="button">Go to Dashboard</a>
