--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
                         <form role="form" action="/login" method="post" class="login-form">
                           <div class="form-group">
                             <label class="sr-only" for="form-username">Username</label>
-                              <input type="text" name="username" placeholder="Username..." class="form-username form-control" id="name">
+                              <input type="text" name="name" placeholder="Username..." class="form-username form-control" id="name">
                             </div>
                             <div class="form-group">
                               <label class="sr-only" for="form-password">Password</label>
