--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,8 +22,8 @@
 
     <div class="container-fluid">
       <div class="row">
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <br><br>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 main">
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
