--- a/public/common/css/dashboard.css
+++ b/public/common/css/dashboard.css
@@ -8,9 +8,11 @@ body {
 }
 
 
-.row {
-  margin-right: -15px;
-  margin-left: -15px;
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 /*
  * Global add-ons
