--- a/public/common/css/dashboard.css
+++ b/public/common/css/dashboard.css
@@ -14,6 +14,16 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
+
+.row {
+
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 /*
  * Global add-ons
  */
