--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="common/css/signin.css">
     <link rel="stylesheet" href="common/css/style.css">
+    <link rel="stylesheet" href="common/css/dashboard.css">
 
    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
