--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -67,10 +67,10 @@
                  <li><a href="#">One more separated link</a></li-->
                </ul>
              </li>
-             <li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages</a></li>
+             <!--li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages</a></li-->
            </ul>
            <ul class="nav navbar-nav navbar-right">
-             <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%= req.session.name %> </a></li>
+             <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%= username %> </a></li>
              <!--li><a href="../navbar-static-top/">Static top</a></li>
              <li><a href="../navbar-fixed-top/">Fixed top</a></li-->
            </ul>
