--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,6 +23,7 @@
     <div class="container-fluid">
       <div class="row">
         <br>
+        <%=JSON.stringify(session)%>
         <!--div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main"-->
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
