--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -70,7 +70,8 @@
              <!--li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages</a></li-->
            </ul>
            <ul class="nav navbar-nav navbar-right">
-             <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%=name%>님 환영 </a></li>
+             <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%=name%>님 </a></li>
+             <li> <a href="logout"> 로그아웃 </a> </li>
              <!--li><a href="../navbar-static-top/">Static top</a></li>
              <li><a href="../navbar-fixed-top/">Fixed top</a></li-->
            </ul>
