--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -19,11 +19,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="form-box">
-          <div class="form-top">
-            <h3>newproject:</h3>
-          </div>
           <div class="form-bottom">
             <form role="form" action="/" method="post" class="form-newproject">
+              <div class="form-group">
+                   PM: <%=name%>
+              </div>
               <div class="form-group">
                 <label class="sr-only" for="projectname">프로젝트명</label>
                    프로젝트명: <input type="text" name="pname" placeholder="" class="form-projectname form-control" id="pname">
@@ -32,11 +32,33 @@
                  <label class="sr-only" for="form-password">프로젝트설명</label>
                    설명: <textarea type="text" name="pdesc" placeholder="" class="form-projectdesc form-control" id="pdesc"> </textarea>
               </div>
+                <div class="input-group">
+                  Task선택
+                  <span class="input-group-addon">
+                    <input type="checkbox" id="t1" name="t1"> 신규/대개체/용량증설 Infra Spec.정 및 견적서 산정
+                  </span>
+                  <span class="input-group-addon">
+                    <input type="checkbox" id="t2" name="t2"> 구축 계획서 작성 및 단계별 작업 일정 초안 수립
+                  </span>
+                  <span class="input-group-addon">
+                    <input type="checkbox" id="t3" name="t3"> Kick off 미팅 준비 및 진행 
+                  </span>
+                  <span class="input-group-addon">
+                    <input type="checkbox" id="t4" name="t4"> 작업 요청서 작성
+                  </span>
+                  <span class="input-group-addon">
+                    <input type="checkbox" id="t5" name="t5"> 장비 납품
+                  </span>
+                  <span class="input-group-addon">
+                    <input type="checkbox" default="checked" id="t6" name="t6"> 네트워크 할당 요청, 수령 및 공사 진행
+                  </span>
+                  <span class="input-group-addon">
+                    <input type="checkbox" default="checked" id="t6" name="t6"> 인수시험 절차서 작성 및 검토 
+                  </span>
+                  <input type="text" class="form-control" aria-label="...">
+    </div><!-- /input-group -->
               <div class="form-group">
-                   PM: <%=name%>
-              </div>
-              <div class="form-group">
-                   일정: <input type="date" name="pschedule" placeholder="" class="form-pschedule form-control" id="pschedule">
+                   
               </div>
               <button type="submit" class="btn">등록!</button>
             </form>
