--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -34,15 +34,14 @@
               </div>
                 <div class="input-group">
                   Task선택 <br>    
-                    <input type="checkbox" id="t1" name="t1"> 신규/대개체/용량증설 Infra Spec.정 및 견적서 산정                 
-                    <input type="checkbox" id="t2" name="t2"> 구축 계획서 작성 및 단계별 작업 일정 초안 수립
-                    <input type="checkbox" id="t3" name="t3"> Kick off 미팅 준비 및 진행
-                    <input type="checkbox" id="t4" name="t4"> 작업 요청서 작성               
-                    <input type="checkbox" id="t5" name="t5"> 장비 납품                  
-                    <input type="checkbox checked" id="t6" name="t6"> 네트워크 할당 요청, 수령 및 공사 진행                 
-                    <input type="checkbox checked" id="t6" name="t6"> 인수시험 절차서 작성 및 검토
-                  <input type="text" class="form-control" aria-label="...">
-    </div><!-- /input-group -->
+                    <input type="checkbox" id="t1" name="t1"> 신규/대개체/용량증설 Infra Spec.정 및 견적서 산정   <br>              
+                    <input type="checkbox" id="t2" name="t2"> 구축 계획서 작성 및 단계별 작업 일정 초안 수립 <br>
+                    <input type="checkbox" id="t3" name="t3"> Kick off 미팅 준비 및 진행 <br>
+                    <input type="checkbox" id="t4" name="t4"> 작업 요청서 작성 <br>
+                    <input type="checkbox" id="t5" name="t5"> 장비 납품 <br>
+                    <input type="checkbox checked" id="t6" name="t6"> 네트워크 할당 요청, 수령 및 공사 진행 <br>           
+                    <input type="checkbox checked" id="t6" name="t6"> 인수시험 절차서 작성 및 검토<br>
+                </div><!-- /input-group -->
               <div class="form-group">
 
               </div>
