--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -32,15 +32,15 @@
                  <label class="sr-only" for="form-password">프로젝트설명</label>
                    설명: <textarea type="text" name="pdesc" placeholder="" class="form-projectdesc form-control" id="pdesc"> </textarea>
               </div>
-                <div class="input-group">
+                <div class="input-group" style="font-weight:bold;">
                   Task선택 <br>
-                    <input type="checkbox" id="t1" name="t1" checked> 신규/대개체/용량증설 Infra Spec.정 및 견적서 산정   <br>
-                    <input type="checkbox" id="t2" name="t2" checked> 구축 계획서 작성 및 단계별 작업 일정 초안 수립 <br>
-                    <input type="checkbox" id="t3" name="t3" checked> Kick off 미팅 준비 및 진행 <br>
-                    <input type="checkbox" id="t4" name="t4" checked> 작업 요청서 작성 <br>
-                    <input type="checkbox" id="t5" name="t5" checked> 장비 납품 <br>
-                    <input type="checkbox" id="t6" name="t6" checked> 네트워크 할당 요청, 수령 및 공사 진행 <br>
-                    <input type="checkbox" id="t7" name="t7" checked> 인수시험 절차서 작성 및 검토<br>
+                  <input type="checkbox" id="t1" name="t1" checked> 신규/대개체/용량증설 Infra Spec.정 및 견적서 산정 <br>
+                  <input type="checkbox" id="t2" name="t2" checked> 구축 계획서 작성 및 단계별 작업 일정 초안 수립 <br>
+                  <input type="checkbox" id="t3" name="t3" checked> Kick off 미팅 준비 및 진행 <br>
+                  <input type="checkbox" id="t4" name="t4" checked> 작업 요청서 작성 <br>
+                  <input type="checkbox" id="t5" name="t5" checked> 장비 납품 <br>
+                  <input type="checkbox" id="t6" name="t6" checked> 네트워크 할당 요청, 수령 및 공사 진행 <br>
+                  <input type="checkbox" id="t7" name="t7" checked> 인수시험 절차서 작성 및 검토<br>
                   <input type="checkbox" id="t8" name="t8" checked> 인수시험 확인<br>
                   <input type="checkbox" id="t9" name="t9" checked> 개통 확인<br>
                   <input type="checkbox" id="t10" name="t10" checked> 개통 후 안정화 기간동안 서비스 정상 상태 확인<br>
