bold말고 색 수정

--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -21,7 +21,7 @@
         <div class="form-box">
           <div class="form-bottom">
             <form role="form" action="/" method="post" class="form-newproject">
-              <div class="form-group">
+              <div class="form-group" style="font-weight:bold;">
                    PM: <%=name%>
               </div>
               <div class="form-group">
@@ -32,7 +32,7 @@
                  <label class="sr-only" for="form-password">프로젝트설명</label>
                    설명: <textarea type="text" name="pdesc" placeholder="" class="form-projectdesc form-control" id="pdesc"> </textarea>
               </div>
-                <div class="input-group" style="font-weight:bold;">
+                <div class="input-group">
                   Task선택 <br>
                   <input type="checkbox" id="t1" name="t1" checked> 신규/대개체/용량증설 Infra Spec.정 및 견적서 산정 <br>
                   <input type="checkbox" id="t2" name="t2" checked> 구축 계획서 작성 및 단계별 작업 일정 초안 수립 <br>
