--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="form-box">
-          <div class="form-bottom">
+          <div class="form-top">
             <form role="form" action="/" method="post" class="form-newproject">
               <div class="form-group" style="font-weight:bold;">
                    PM: <%=name%>
