--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -34,17 +34,17 @@
               </div>
                 <div class="input-group">
                   Task선택 <br>
-                  <input type="checkbox" name="estimation" checked> Spec 산정 및 견적 산정 <br>
-                  <input type="checkbox" name="build-plan" checked> 구축 계획 <br>
-                  <input type="checkbox" name="kickoff" checked> Kick off meeting <br>
-                  <input type="checkbox" name="workrequest" checked> 공사 신청서 작성 및 승인 <br>
-                  <input type="checkbox" name="equip-delivery" checked> 장비 납품 <br>
-                  <input type="checkbox" name="network" checked> 네트워크 할당 요청, 수령 및 공사 진행 <br>
-                  <input type="checkbox" name="at" checked> 인수시험 절차서 작성 및 검토<br>
-                  <input type="checkbox" name="at-check" checked> 인수시험 확인<br>
-                  <input type="checkbox" name="open" checked> 개통<br>
-                  <input type="checkbox" name="final-acceptance" checked> 최종 인수 <br>
-                  <input type="checkbox" name="bp" checked> 인력/BP 관리<br>
+                  <input type="checkbox" name="estimation" value="estimation" checked> Spec 산정 및 견적 산정 <br>
+                  <input type="checkbox" name="build-plan" value="build-plan"checked> 구축 계획 <br>
+                  <input type="checkbox" name="kickoff" value="kickoff" checked> Kick off meeting <br>
+                  <input type="checkbox" name="workrequest" value="workrequest" checked> 공사 신청서 작성 및 승인 <br>
+                  <input type="checkbox" name="equip-delivery" value="equip-delivery" checked> 장비 납품 <br>
+                  <input type="checkbox" name="network" value="network" checked> 네트워크 할당 요청, 수령 및 공사 진행 <br>
+                  <input type="checkbox" name="at" value="at" checked> 인수시험 절차서 작성 및 검토<br>
+                  <input type="checkbox" name="at-check" value="at-check" checked> 인수시험 확인<br>
+                  <input type="checkbox" name="open" value="open" checked> 개통<br>
+                  <input type="checkbox" name="final-acceptance" value="final-acceptance" checked> 최종 인수 <br>
+                  <input type="checkbox" name="bp" value="bp" checked> 인력/BP 관리<br>
                 </div><!-- /input-group -->
               <div class="form-group">
 
