--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="form-box">
           <div class="form-top">
-            <form role="form" action="/testlist" method="post" class="form-newproject">
+            <form role="form" action="/testlist" onSubmit="return make_tasklist()" method="post" class="form-newproject">
               <div class="form-group" style="font-weight:bold;">
                    PM: <%=name%>
               </div>
@@ -49,7 +49,7 @@
               <div class="form-group">
 
               </div>
-              <button type="submit" class="btn" onclick="return make_tasklist();" style="margin:auto; display:block;"> 등록! </button>
+              <button type="submit" class="btn" style="margin:auto; display:block;"> 등록! </button>
             </form>
             <% function make_tasklist(){ var tasklist = []; var tasks = document.forms[0]; for(var i=0; i<tasks.length; i++){ if(tasks[i].checked) {tasklist.push(tasks[i]);} } return tasklist;} %>
           </div>
