--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="form-box">
           <div class="form-top">
-            <form role="form" action="/testdb" onSubmit="return make_tasklist()" method="post" class="form-newproject">
+            <form role="form" action="/newprojectadded" onSubmit="return make_tasklist()" method="post" class="form-newproject">
               <div class="form-group" style="font-weight:bold;">
                    PM: <%=name%>
               </div>
