--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1> 현재 팀 내 진행 중인 프로젝트 </h1>
-    
+
     <div class="container-fluid">
       <div class="row">
         <br>
@@ -57,8 +57,8 @@
                 </tr>
               </thead>
               <tbody>
-                <!-- 반복문으로 내 프로젝트 뿌릴 예정, 이 전에 myproject에 프로젝트 들 중 pm이 나인것 찾아와야함 -->
-                <% for(var i=0; i<myproject.length; i++) { %> 
+                <!-- 반복문으로 내 프로젝트 뿌릴 예정, 이 전에 myproject에 프로젝트 들 중 pm이 나인것 찾아와야함 >
+                <% for(var i=0; i<myproject.length; i++) { %>
                 <tr>
                   <td> <%= i+1 %> </td>
                   <td> <%= myproject[i].pm %> </td>
@@ -66,7 +66,7 @@
                   <td> <%= myproject[i].pdesc %> </td>
                   <td> zzz </td>
                 </tr>
-               <% } %>
+               <% } %-->
               </tbody>
             </table>
           </div>
