moved to project router

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,10 +6,12 @@
 
    <title> <%= title %> </title>
 
-   <script src="common/js/jquery-2.2.4.js"></script>
-   <script src="bootstrap/js/bootstrap.min.js"></script>
-   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+   <!-- CSS , menu bar 따로 넣어야함 .. -->
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+   <link rel="stylesheet" href="common/css/style.css">
+
 
     <% include ./navbar.ejs %>
 
