--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -58,10 +58,15 @@
              <li <% if (page_name === 'myproject') { %>class="active" <% } %>class="dropdown">
                <a href="myproject" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> My Projects <span class="caret"></span></a>
                <ul class="dropdown-menu">
-                 <li><a href="project1">Project 1</a></li>
+
+                 <% for(var i=0; i<myprojects.length; i++) { %>
+                 <li><a href= <%= myprojects[i] %> > <%= myprojects[i] %> </a> </li>
+                 <% } %>
+
+                 <!--li><a href="project1">Project 1</a></li>
                  <li><a href="project2">Project 2</a></li>
                  <li><a href="#">Something else</a></li>
-                 <!--li role="separator" class="divider"></li>
+                 <li role="separator" class="divider"></li>
                  <li class="dropdown-header">Nav header</li>
                  <li><a href="#">Separated link</a></li>
                  <li><a href="#">One more separated link</a></li-->
