--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -60,7 +60,7 @@
                <ul class="dropdown-menu">
 
                  <% for(var i=0; i<myprojects.length; i++) { %>
-                 <li><a href= <%= myprojects[i] %> > <%= myprojects[i] %> </a> </li>
+                 <li><a href= <%= myprojects[i].pname %> > <%= myprojects[i].pname %> </a> </li>
                  <% } %>
 
                  <!--li><a href="project1">Project 1</a></li>
