--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -63,7 +63,7 @@
                  <li><a href= "projects/<%= myprojects[i]._id %>" > <%= myprojects[i].pname %> </a> </li>
                  <% } %>
 
-                 <!li><a href="project1">Project 1</a></li>
+                 <li><a href="project1">Project 1</a></li>
                  <li><a href="project2">Project 2</a></li>
                  <li><a href="#">Something else</a></li>
                  <li role="separator" class="divider"></li>
