--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -56,13 +56,13 @@
              <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="dashboard">Dashboard</a></li>
              <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="newproject">New Project</a></li>
 
+           </ul>
            <ul class="nav navbar-nav navbar-right">
              <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%=name%>님 </a></li>
              <li> <a href="logout"> 로그아웃 </a> </li>
-          
-           
+             <!--li><a href="../navbar-static-top/">Static top</a></li>
+             <li><a href="../navbar-fixed-top/">Fixed top</a></li-->
            </ul>
-         </ul>
          </div><!--/.nav-collapse -->
        </div><!--/.container-fluid -->
      </nav>
