--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -65,11 +65,11 @@
 
                  <li><a href="project1">Project 1</a></li>
                  <li><a href="project2">Project 2</a></li>
-                 <li><a href="#">Something else</a></li>
+                 <!--li><a href="#">Something else</a></li>
                  <li role="separator" class="divider"></li>
                  <li class="dropdown-header">Nav header</li>
                  <li><a href="#">Separated link</a></li>
-                 <li><a href="#">One more separated link</a></li>
+                 <li><a href="#">One more separated link</a></li-->
                </ul>
              </li>
              <li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages</a></li-->
