--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -15,6 +15,7 @@
   </head>
   <body>
     <% include ./navbar.ejs %>
-    <h1> 프로젝트 이름 올 자리 </h1>
+    <h1> <%= project[0].pname %> </h1>
+    <p> <%= project[0].pm %> </p>
   </body>
 </html>
