--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -52,7 +52,7 @@
              <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="dashboard">Dashboard</a></li>
              <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="newproject">New Project</a></li>
 
-             <li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages</a></li>
+             <li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages <span class="badge" > 42 </span></a></li>
            </ul>
            <ul class="nav navbar-nav navbar-right">
              <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%=name%>님 </a></li>
