--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -55,9 +55,14 @@
                 </h4>
               </div>
               <div id="collapse3" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                <div class="panel-body">
+                  이 자리에 인풋박스, 첨부파일 가능한 공
+                  <form role="form">
+                    <div class="form-group">
+                      <textarea class="form-control" rows="5" id="comment"></textarea>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div> <!--panel-->
           </div> <!--group-->
