--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -103,9 +103,9 @@
           <h3> 프로젝트 개요 </h3>
           <p> <%= project[0].pdesc %> </p>
           <p> <%= project[0].bp[0] %> </p>
-          <p> 수정/삭제는 되돌릴 수 없으니 주의하세요! </p>
-          <a href="/delete/<%=project[0]._id %>"> 프로젝트 삭제 </a> <br>
           <a href="/update/<%=project[0]._id %>"> 프로젝트 수정 </a> <br>
+          <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br>
+
         </div> <!-- right division -->
 
       </div> <!-- div class row -->
