--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -67,15 +67,15 @@
                   </h4>
                 </div>
                 <div id=" <%= project[0].task[i]._id %>" class="panel-collapse collapse in">
-                  <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                  <div class="panel-body">
+                    <%= project[0].task[i].tname %>
+                  </div>
                 </div>
               </div>
 
             <% } %>
 
-          
+
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
