--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -68,12 +68,29 @@
                 </div>
                 <div id=" <%= project[0].task[i]._id %>" class="panel-collapse collapse in">
                   <div class="panel-body">
-                    <%= project[0].task[i].tname %>
+                    태스크 이름 : <%= project[0].task[i].tname %>
+                    필수 산출물 :
                   </div>
                 </div>
               </div>
 
             <% } %>
+
+
+                        <div class="panel panel-default">
+                          <div class="panel-heading">
+                            <h4 class="panel-title">
+                              <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Collapsible Group 4</a>
+                            </h4>
+                          </div>
+                          <div id="collapse4" class="panel-collapse collapse">
+                            <div class="panel-body">
+                              이 자리에 인풋박스, 첨부파일 가능한 공
+                              <input name="test" rows="5"/>
+                              <a href = ""> <span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span> </a>
+                            </div>
+                          </div>
+                        </div> <!--panel-->
 
 
             <div class="panel panel-default">
