--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -63,11 +63,13 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href= "<%= project[0].task[i]._id %> " > Task # <%= i %> </a>
+                    <a data-toggle="collapse" data-parent="#accordion" href= "<%= project[0].task[i]._id %> " > Task # <%= i %> : <%= project[0].task[i].tname %> </a>
                   </h4>
                 </div>
                 <div id=" <%= project[0].task[i]._id %>" class="panel-collapse collapse in">
                   <div class="panel-body">
+                    <%= project[0].task[i]._id %>
+
                     태스크 이름 : <%= project[0].task[i].tname %>
                     필수 산출물 :
                   </div>
