--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -34,8 +34,7 @@
    <![endif]-->
  </head>
  <body>
-   <div class="container">
-     <!-- Static navbar -->
+   <div class="container-fluid">
      <nav class="navbar navbar-default">
        <div class="container-fluid">
          <div class="navbar-header">
