--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -67,8 +67,8 @@
                   <td> <a href = "<%= myprojects[i]._id %>" > <%= myprojects[i].pname %> </a> </td>
                   <td> <%= myprojects[i].pdesc %> </td>
                   <td> zzz </td> <!-- 진행상황 쓸예정 -->
-                  <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href = "updateproject"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
-                  
+                  <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href = "update/<%= myprojects[i]._id %>"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
+
                 </tr>
                <% } %>
               </tbody>
