--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -32,7 +32,7 @@
               </div>
               <div class="form-group">
                  <label class="sr-only" for="form-password">프로젝트설명</label>
-                   설명: <textarea type="text" name="pdesc" value="<%= project[0].pdesc" class="form-projectdesc form-control" id="pdesc"> </textarea>
+                   설명: <textarea type="text" name="pdesc" value="<%= project[0].pdesc %>" class="form-projectdesc form-control" id="pdesc"> </textarea>
               </div>
                 <div class="input-group">
                   Task <br>
