--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -87,8 +87,8 @@
           <p> <%= project[0].pdesc %> </p>
           <p> <%= project[0].bp[0] %> </p>
 
-          <a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
-          <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br>
+          <!--a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
+          <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br-->
 
         </div> <!-- right division -->
 
