--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -31,7 +31,7 @@
                   <th>프로젝트명</th>
                   <th>설명</th>
                   <th>진행상황</th>
-                  <th>수정</th>
+                  <th></th>
                 </tr>
               </thead>
               <tbody>
@@ -43,7 +43,7 @@
                   <td> <a href = "<%= myprojects[i]._id %>" > <%= myprojects[i].pname %> </a> </td>
                   <td> <%= myprojects[i].pdesc %> </td>
                   <td> zzz </td> <!-- 진행상황 쓸예정 -->
-                  <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href = "update/<%= myprojects[i]._id %>"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
+                  <td> <a href = "update/<%= myprojects[i]._id %>"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
 
                 </tr>
                <% } %>
