--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -31,7 +31,7 @@
               </div>
               <div class="form-group">
                  <label class="sr-only" for="form-password">프로젝트설명</label>
-                   설명: <textarea type="text" name="pdesc" placeholder="" class="form-projectdesc form-control" id="pdesc"> </textarea>
+                   설명: <input type="text" name="pdesc" placeholder="" class="form-projectdesc form-control" id="pdesc">
               </div>
               <div class="input-group">
                 Task <br>
