--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -48,7 +48,7 @@
                   <input type="checkbox" name="task" value="equip-delivery" checked disabled> 장비 납품 <br>
                   <input type="hidden" name="task" value="납품" checked>
 
-                  <input type="checkbox" name="task" value="IP할당"> 네트워크 할당 요청, 수령 및 공사 진행 <br>
+                  <input type="checkbox" name="task" value="IP할당" > 네트워크 할당 요청, 수령 및 공사 진행 <br>
 
                   <input type="checkbox" name="task" value="at" checked disabled> 인수시험 절차서 작성 및 검토 <br>
                   <input type="hidden" name="task" value="인수시험" checked>
@@ -64,9 +64,7 @@
               <div class="form-group">
 
               </div>
-              <button type="submit" class="btn" style="margin:auto; display:block;"> 수정 </button>
-              <a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
-              <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br>
+              <button type="submit" class="btn" style="margin:auto; display:block;"> 수정 </button> <a href="/update/<%=project[0]._id %>"> 수정 </a> <br> <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br>
             </form>
 
           </div>
