admin만들어야하는데

--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -89,7 +89,7 @@
               <div class="form-group">
 
               </div>
-              <button type="submit" class="btn" style="margin:auto; display:block;"> 수정 </button> <button type='button' id="<%=project[0]._id %>" class="btn" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
+              <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button> <button type='button' id="<%=project[0]._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
 
             </form>
 
