--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,8 +53,7 @@
                         <h1><strong>PMO Product Repository</strong></h1>
                         <div class="description">
                           <p>
-                            첫 페이지: 로그인
-                            <!--할말-->
+                            로그인해주세요
                           </p>
                         </div>
                     </div>
@@ -73,8 +72,8 @@
                           <div class="form-top-right">
                             <i class="fa fa-lock"></i>
                           </div>
-                          </div>
-                          <div class="form-bottom">
+                        </div>
+                        <div class="form-bottom">
                         <form role="form" action="/login" method="post" class="login-form">
                           <div class="form-group">
                             <label class="sr-only" for="form-username">Username</label>
@@ -87,10 +86,13 @@
                             <button type="submit" class="btn">Sign in!</button>
                             <a href="/dashboard" class="btn" role="button">Go to Dashboard</a>  <!--세션 없이는 어차피 못가게 되었으므로 없앨것-->
                         </form>
-                      </div>
-                    </div>
-                  </div>
-    </div>
+                        </div>
+                      </div> <!--formbox-->
+                    </div> <!-- col-->
+              </div><!--row-->
+          </div><!--container-->
+      </div><!--innerbg-->
+    </div> <!--topcontent-->
 
     <!-- Footer -->
     <footer>
@@ -99,10 +101,9 @@
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="footer-border"></div>
-            <!--p>SK C&C <strong>Intern Team 7</strong></a>
-            <i class="fa fa-smile-o"></i></p-->
+            <p>SK C&C <strong> PMO </strong>
+            <i class="fa fa-smile-o"></i></p>
           </div>
-
         </div>
       </div>
     </footer>
