--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="/common/css/dashboard.css">
 
    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+   <link href="/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
    <!-- Custom styles for this template -->
-   <link href="navbar.css" rel="stylesheet">
+   <link href="/navbar.css" rel="stylesheet">
    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-   <script src="assets/js/ie-emulation-modes-warning.js"></script>
+   <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
    <!--[if lt IE 9]>
@@ -63,10 +63,10 @@
    </div> <!-- /container -->
 
 
-   <script src="common/js/jquery-2.2.4.js"></script>
-   <script src="bootstrap/js/bootstrap.min.js"></script>
+   <script src="/common/js/jquery-2.2.4.js"></script>
+   <script src="/bootstrap/js/bootstrap.min.js"></script>
    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+   <script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
 
  </body>
 </html>
